CHG: Updated changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,9 +4,10 @@ Procsim Changelog
 [v1.1.0] - Not released yet
     - Add: Support for L1 products
     - Add: Support for L2a products
-    - Fix: create date in product names
-    - Fix: Mission phase must be in capitals
-    - Fix: Tracknr type string, not integer (can be "___" in drifting orbits)
+    - Add: Dockerfile added to create a container image
+    - Fix: Correct create date (use current UTC time) in all product names
+    - Fix: Mission phase in MPH must be in capitals
+    - Fix: Tracknr in scenario now type string, not integer (can be "___" in drifting orbits)
 
 [v1.0.0] - 2021/03/31
     Initial release. Supports Biomass RAW and L0 products.
