CHG: Added compact_creation_date_epoch scenario parameter

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
 Procsim Changelog
 -----------------
 
+[v1.2.0] - To be released
+    - Add: Optional compact_creation_date_epoch variable in scenario
+
 [v1.1.0] - 2021/04/21
     - Add: Support for L1 products
     - Add: Support for L2a products
