--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,12 @@
 Procsim Changelog
 -----------------
 
+[v1.1.1] - 2021/04/29
+    - Fix: Do not stop if products are not a directory, generate a warning only (to allow MPL_ORBPRE products)
+    - Chg: Accept extensions .zip and .ZIP for zipped products
+    - Fix: Fixed 'do_zip' option for raw products, renamed to zip_output
+    - Chg: Changed default for zip_output to False (was True)
+
 [v1.1.0] - 2021/04/21
     - Add: Support for L1 products
     - Add: Support for L2a products
