--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,21 @@
 Procsim Changelog
 -----------------
 
+next release
+    - Fix: issue 3, require scenario output types to be a subset of task job order possible outputs, instead of being strictly equal
+    - Fix: issue 9, toi_start_offset is the nr. of seconds to be SUBTRACTED from (and not added to) the TOI start time
+    - Fix: issue 10, include scenario parameters that are common to all generators in AUX and MPL generation    
+    - Fix: do not abort if no input data is present AND no metadata_source is given
+    - Fix: rounding error in parsing TOI from job order
+    - Chg: derive validity start/stop from begin/end position if not known
+    - Fix: output_path for level2 products was incorrect
+
 [v1.3.0] - 2021/09/06
     - Add: Optional 'begin_end_position_from_toi' variable for all products.
            When set to true, TOI from Job Order is used as begin/end positions.
     - Add: Optional 'toi_start_offset', 'toi_stop_offset' variable.
            This time, in seconds, is added to the TOI start/stop times.
-    - Chg: CHG: Modified procsim to support Generic Processor ICD v1.3
+    - Chg: Modified procsim to support Generic Processor ICD v1.3
     - Chg: Improved error messages in main product header generator
 
 [v1.2.0] - 2021/07/20
