--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
 Procsim Changelog
 -----------------
 
+[v2.0.1] - 2023/03/16
+    - implement step2 for EO products
+
 [v2.0.0] - 2023/02/27
     - Add: support for FLEX mission (up to L0)
 
